# EconometricModel_ML

./: .gitignore  Model.ipynb  README.md  app.py  config.py  deep.py  dummy_real_estate_errors.csv  inputs_outputs.md  mejor_prospecto.py  model_explanation.md  pyproject.toml  requirements.txt  secret_config.py
EconometricModel_ML/: pyvenv.cfg
EconometricModel_ML/Scripts/: activate  activate.bat
controller/: handler.py  main.py
data/: dummy_real_estate.csv  dummy_real_estate_exceptions.csv
model/: predict.py  preprocess.py  storage.py  train.py
model_predictor/: main.py  model.py  predict.py  preprocess.py  train_model.py
routes/: actualizar.py  buscar.py
sql/: create_table.sql  insert_into_table.sql
src/controller/: data_controller.py  model_controller.py  predicted_prices_controller.py
src/controller/routes/: admin_tablas.py  eliminar.py  insertar.py
src/model/: data_preparation.py  exceptions.py  feature_engineering.py  future_predictions.py  model_training.py  predicted_prices.py
src/view/console/: database_gui.py  main.py
templates/: actualizar.html  base.html  buscar.html  eliminar.html  index.html  insertar.html  mostrar_resultado.html
test/: test_model.py
tests/: test_model.py  test_predicted_prices.py
view/: console.py
